fixed about page height on safari

--- a/pages/about/about.scss
+++ b/pages/about/about.scss
@@ -10,7 +10,7 @@ html, body {
   overflow-x: hidden;
   overflow-y: scroll;
   white-space: nowrap;
-  height: 100vh;
+  // height: 100vh;
   display: inline-flex;
   flex-direction: column;
   //flex-flow: row nowrap;
